# agent_api

./: .env.example  .gitattributes  .gitconfig  .gitignore  .gitmessage  .pre-commit-config.yaml  README.md  build.sh  gunicorn_conf.py  pyproject.toml
src/: main.py
src/agent/: __init__.py  chatbot.py  minute_writer.py
src/api/: endpoints.py  schemas.py
src/core/: config.py  playground.py
tests/: test_chatbot.py  test_endpoints.py  test_minute_writer.py
