[tool.poetry]
name = "agent_api"
version = "0.1.0"
description = "A Langgraph Chatbot FastAPI Template"
authors = ["SAI-dev <ai@hyundaicapital.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
ruff = ">=0.11.4"
python-dotenv = ">=1.1.0"
fastapi = ">=0.115.12"
uvicorn = ">=0.34.0"
gunicorn = ">=23.0.0"
langgraph = ">=0.3.27"
langchain = ">=0.3.23"
langchain-openai = ">=0.3.12"
langchain_community = ">=0.3.21"
python-multipart = ">=0.0.20"
streamlit = ">=1.44.1"
pydantic = ">=2.11.3"
pydantic-settings = ">=2.8.1"
pydub = ">=0.25.1"
poethepoet = ">=0.24.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4
exclude = [
    ".git",
    ".env",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".*",
    "__init__.py",
    "*.md"
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "W", "D", "I", "ANN", "ARG", "PL", "PTH"]
ignore = ["D203", "D212", "SIM117"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poe.tasks]
format = "ruff format ."
check = "ruff check . --fix --output-file ruff.log"
api-dev = "uvicorn src.main:app --reload"
api-prod = "nohup gunicorn -c gunicorn_conf.py src.main:app --log-level debug &"
playground = "nohup streamlit run ./src/core/playground.py &"

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
